Anna - commented my code + made small changes